--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* App.css */
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Manrope', sans-serif;
   background-color: #A46253;
 }
 
@@ -33,7 +33,7 @@ body {
   color: #A46253;
   text-align: center;
   letter-spacing: 2px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Manrope', sans-serif;
   font-size: 24px;
   font-weight: 600;
   line-height: normal;
@@ -57,9 +57,9 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(25px + 2vmin);
+  font-size: calc(24px + 2vmin);
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Manrope', sans-serif;
   font-weight: 400;
   color: #A46253;
 }
