--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,21 @@ body {
   background-color: #A46253;
 }
 
+.App-title {
+  margin-bottom: 10px;
+}
+
+.All-data {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 90vw;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+
+}
+
 .App {
   text-align: center;
   border: 2px solid #A46253;
@@ -12,6 +27,28 @@ body {
   /* Add padding for better spacing */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   /* Add a subtle box shadow */
+}
+
+.Artist-image {
+  height: 10vmin;
+  width: 10vmin;
+  pointer-events: none;
+  border-radius: 50%;
+  margin-bottom: 0px;
+}
+
+.Artist-name {
+  font-size: 10px;
+  font-family:'Courier New', Courier, monospace;
+  margin-bottom: 10px;
+}
+
+.Artist-data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
 }
 
 .App-logo {
@@ -25,6 +62,11 @@ body {
   .App-logo {
     animation: App-logo-spin infinite 0.2s linear;
     /* Slowed down the animation */
+    aspect-ratio: 1/1;
+  }
+
+  .Artist-image {
+    animation: App-logo-spin infinite 10s linear;
     aspect-ratio: 1/1;
   }
 }
@@ -43,24 +85,8 @@ body {
   padding: 15px 30px;
   text-decoration: none;
   transition: background-color 0.3s ease;
-  margin-top: 30px;
-}
-
-.App-button2 {
-  color: #ffffff;
-  text-align: center;
-  letter-spacing: 2px;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 24px;
-  font-weight: 600;
-  line-height: normal;
-  border-radius: 100px;
-  border: 2px solid #A46253;
-  background: #da2eb5;
-  padding: 15px 30px;
-  text-decoration: none;
-  transition: background-color 0.3s ease;
-  margin-top: 30px;
+  margin-top: -10px;
+  margin-bottom: 20px;
 }
 
 .App-button:hover {
