--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,8 @@ body {
 
 .App-header {
   background: #FFEB81;
-  min-height: 100vh;
+  margin-top: auto;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
